unoriented cases succesfully generated